# sergios_unit_testing_attempts

./: .clang-format  CMakeLists.txt  main.c
src/: number_generator.c  number_generator.h  number_parser.c  number_parser.h  user_io.c  user_io.h
test/src/: test_number_parser.c
